<resources>
    <string name="app_name">Corona Detector</string>
    <string name="logout">Logout</string>
    <string name="verify_now">Verify now</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_email_address">Your Email Address</string>
    <string name="your_name">Your Name</string>
    <string name="email_not_verfied">Email Not Verfied !</string>
    <string name="email">Email</string>
    <string name="generate_qr">Generate QR</string>
    <string name="phone">Phone</string>
    <string name="todoP">TODO</string>
    <string name="todo">TODO</string>
    <string name="title_activity_side_bar">SideBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="profileCard">Profile</string>
    <string name="mapCard">Map</string>
    <string name="grid_layout">Grid Layout</string>
    <string name="healthcard">My Health</string>
    <string name="be_careful">Be Careful</string>
    <string name="tips_advices">Advices</string>
    <string name="settings">Settings</string>
    <string name="dashboard">Dashboard</string>
    <string name="search_text">Search…</string>
    <string name="description">Some dummy data to test with</string>
    <string name="featured_locations">All The Tips</string>
    <string name="testing">some dummy data to test the description</string>
    <string name="featured_locations_description">Scroll to the left to see more!</string>
    <string name="police">Police</string>
    <string name="hospital">Hospital</string>
    <string name="more">More</string>
    <string name="view_all">View All</string>
    <string name="profile">Profile</string>
    <string name="my_health">My Health</string>
    <string name="map">Map</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="ambulance">Ambulance</string>
    <string name="tips_desc">Swipe to the left to see more precautions you can follow and apply!</string>
    <string name="wash_your_hands">Wash your hands</string>
    <string name="wash_desc">For at least 20 seconds each time you go outside.</string>
    <string name="temperature">Temperature :</string>
    <string name="are_you_tired">Are you tired :</string>
    <string name="DryCaugh">Dry Cough :</string>
    <string name="aches_and_pain">Aches and Pain</string>
    <string name="breathing">Any breathing troubles :</string>
    <string name="soar_throat">Soar throat :</string>
    <string name="diarrhea">Diarrhea :</string>
    <string name="submit">Submit</string>
    <string name="ivalidTemp">Please enter a valid value</string>
    <string name="show_my_progress">Show My Progress</string>
    <string name="call_a_doctor_now">Call a doctor NOW!</string>
    <string name="it_s_better_to_check">You better call a doctor</string>
    <string name="searching">Searching...</string>
    <string name="call_ambulance">Call Ambulance</string>
    <string name="scann_a_code">Scann A Code</string>

    <string-array name="temp">
        <item>Hot</item>
        <item>A little hot</item>
        <item>Normal</item>
        <item>A little cold</item>
        <item>Cold</item>
    </string-array>

    <string-array name="cough">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="breath">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="sour">
        <item>Yes</item>
        <item>No</item>
    </string-array>

</resources>
